2009-03-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	Rewrote the License for text documents:
	* doc/binary_packages.txt: updated license.
	* doc/xpak.txt: updated license.
	* doc/xpak.5: updated license.

	* replace/strndup.c: added compiler checks.

2009-03-26  Lars Hartmann  <lars (at) chaotika (dot) org>

	Moved compiler checks from common.h into the headers and removed
	common.h:
	* include/Makefile.am (header_HEADERS): removed common.h from the
	list headers.
	* src/liblpxpak.c: added c++ compiler checks.
	* src/liblputil.c: added c++ compiler checks.
	* src/liblpatom.c: added c++ compiler checks.
	* include/xpak.h: added c++ compiler checks.  removed include of
	common.h
	* include/util.h: added c++ compiler checks.  removed include of
	common.h
	* include/atom.h: added c++ compiler checks.  removed include of
	common.h
	* include/common.h: removed.

2009-03-25  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/dependency.h: removed obselete draft.

2009-03-24  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/02_lpatom_parse.c: fixed compiler warning due to missing
	include.

2009-03-22  Lars Hartmann  <lars (at) chaotika (dot) org>

	* TODO: updated.

	* doc/binary_packages.txt: added.

	* replace/strndup.c: fixed compiler error.

2009-03-21  Lars Hartmann  <lars (at) chaotika (dot) org>

	* doc/Requirements.txt: updated.

2009-03-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added test for lputil_intlen():
	* test/Makefile.am: added 01_lputil_intlen.
	* test/01_lputil_intlen.c: added.

	Added test for lputil_splitstr():
	* test/Makefile.am: added 01_lputil_splitstr.
	* test/01_lputil_splitstr.c: added.

2009-03-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	Renamed tests:
	* test/02_lpxpak_parse.c: renamed to test/03_lpxpak.c.
	* test/02_lpxpak_parse.tbz2: renamed to test/03_lpxpak.tbz2.
	* test/01_lpatom_parse.c: renamed to test/02_lpatom_parse.c.
	* test/01_lpatom_parse.txt: renamed to test/02_lpatom_parse.txt.
